# PLATEAU-Data-Kasane-Inserter

./: .env.example  Cargo.toml  README.md  generate_rust.py  openapi.yaml  parse.py  parsed_data.json  portal_site.html
src/: config.rs  error.rs  lib.rs  list.rs  main.rs  scheduler.rs
src/features/: bldg.rs  mod.rs  tran.rs
src/kasane/: client.rs  mod.rs  models.rs
