[package]
name = "plateau_data_kasane_inserter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.1"
tempfile = "3.10"
thiserror = "2"
indicatif = "0.17"
nazori = { git = "https://github.com/AirBee-Project/Nazori", branch = "main"}
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
